--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html>
-{% include head.html %}
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+
+  <meta name="author" content="{{ site.author.name }}">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="{{ site.description }}">
+
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic" rel="stylesheet" type="text/css">
+
+  <link rel="canonical" href="{{ site.url }}">
+  <link rel="stylesheet" href="/css/c.css" type="text/css">
+  <link rel="stylesheet" href="/css/github-markdown.css" type="text/css">
+  <script src="/js/j.js"></script>
+</head>
 <body>
-{% include header.html %}
-{{ content }}
-{% include footer.html %}
+<div class="bg-very-light-gray py4 px3">
+  <div class="markdown-body">
+    {{ content }}
+  </div>
+</div>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
